Update IE5 regression tables and empirical analysis
Replaces year dummies with new covariates in IE5_reg_by_rank.tex and IE5_reg_by_rank(2).tex, and adds a new table IE5_reg_by_rank(3).tex. Updates empirical3.tex to focus on IE 5, revises the analysis and table references, and removes previous IE 4 content. Auxiliary files and output are updated accordingly.

--- a/Tables/IE5/IE5_reg_by_rank(2).tex
+++ b/Tables/IE5/IE5_reg_by_rank(2).tex
@@ -6,44 +6,26 @@
                     &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}&\multicolumn{1}{c}{(8)}\\
                     &\multicolumn{1}{c}{ratio}&\multicolumn{1}{c}{ratio}&\multicolumn{1}{c}{ratio}&\multicolumn{1}{c}{ratio}&\multicolumn{1}{c}{ratio}&\multicolumn{1}{c}{ratio}&\multicolumn{1}{c}{ratio}&\multicolumn{1}{c}{ratio}\\
 \hline
-year1=2011          &       0.000         &       0.000         &       0.000         &       0.000         &       0.000         &       0.000         &                     &       0.000         \\
-                    &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &                     &         (.)         \\
+male                &      -8.882\sym{***}&     -11.263\sym{***}&     -10.035\sym{***}&      -7.570\sym{***}&      -8.290\sym{***}&      -9.611\sym{***}&      -7.764\sym{***}&      -6.569\sym{***}\\
+                    &     (0.299)         &     (0.290)         &     (0.291)         &     (0.323)         &     (0.302)         &     (0.402)         &     (0.387)         &     (0.356)         \\
 [1em]
-year1=2012          &       1.540\sym{***}&       1.232\sym{**} &       3.097\sym{***}&       2.962\sym{***}&       1.890\sym{***}&       1.671\sym{***}&                     &       1.644\sym{**} \\
-                    &     (0.553)         &     (0.503)         &     (0.503)         &     (0.560)         &     (0.570)         &     (0.427)         &                     &     (0.753)         \\
+age\_years           &      -5.684\sym{***}&      -5.271\sym{***}&      -5.722\sym{***}&      -6.027\sym{***}&      -5.879\sym{***}&      -5.338\sym{***}&      -5.532\sym{***}&      -5.664\sym{***}\\
+                    &     (0.044)         &     (0.045)         &     (0.043)         &     (0.046)         &     (0.044)         &     (0.057)         &     (0.072)         &     (0.050)         \\
 [1em]
-year1=2013          &       5.563\sym{***}&       4.956\sym{***}&       6.701\sym{***}&       7.396\sym{***}&       5.789\sym{***}&       4.512\sym{***}&                     &       4.464\sym{***}\\
-                    &     (0.560)         &     (0.506)         &     (0.506)         &     (0.552)         &     (0.601)         &     (0.459)         &                     &     (0.760)         \\
+A                   &       0.000         &       0.000         &       0.000         &       0.000         &       0.000         &       0.000         &       0.000         &       0.000         \\
+                    &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         \\
 [1em]
-year1=2014          &      16.451\sym{***}&      16.816\sym{***}&      18.398\sym{***}&      20.284\sym{***}&      18.029\sym{***}&                     &                     &      17.182\sym{***}\\
-                    &     (0.589)         &     (0.530)         &     (0.531)         &     (1.052)         &     (0.736)         &                     &                     &     (0.792)         \\
+D                   &      -0.970\sym{***}&      -0.944\sym{***}&      -1.382\sym{***}&      -0.611\sym{**} &      -0.614\sym{**} &      -0.248         &      -0.164         &       0.206         \\
+                    &     (0.282)         &     (0.267)         &     (0.271)         &     (0.303)         &     (0.285)         &     (0.360)         &     (0.313)         &     (0.357)         \\
 [1em]
-year1=2015          &      12.388\sym{***}&      14.621\sym{***}&      16.505\sym{***}&      25.827\sym{***}&      15.009\sym{***}&                     &       0.000         &      14.907\sym{***}\\
-                    &     (0.535)         &     (0.489)         &     (0.493)         &     (1.648)         &     (0.626)         &                     &         (.)         &     (0.722)         \\
+P                   &       0.014         &       0.132         &      -0.080         &      -0.873\sym{**} &       0.186         &      -0.005         &       0.138         &       0.019         \\
+                    &     (0.375)         &     (0.353)         &     (0.358)         &     (0.414)         &     (0.377)         &     (0.473)         &     (0.410)         &     (0.456)         \\
 [1em]
-year1=2016          &      17.722\sym{***}&      20.000\sym{***}&      21.012\sym{***}&      25.508\sym{***}&      17.160\sym{***}&                     &       6.699\sym{***}&      19.726\sym{***}\\
-                    &     (0.522)         &     (0.499)         &     (0.502)         &     (1.730)         &     (0.739)         &                     &     (0.585)         &     (0.734)         \\
-[1em]
-year1=2017          &      22.383\sym{***}&      25.001\sym{***}&      27.341\sym{***}&      22.746\sym{***}&      25.260\sym{***}&                     &      11.824\sym{***}&      27.678\sym{***}\\
-                    &     (0.549)         &     (0.531)         &     (0.535)         &     (0.833)         &     (0.640)         &                     &     (0.596)         &     (0.787)         \\
-[1em]
-year1=2018          &      13.973\sym{***}&      16.390\sym{***}&      19.640\sym{***}&      18.952\sym{***}&      15.797\sym{***}&                     &       3.608\sym{***}&      15.979\sym{***}\\
-                    &     (0.532)         &     (0.505)         &     (0.511)         &     (0.543)         &     (0.558)         &                     &     (0.567)         &     (0.676)         \\
-[1em]
-year1=2019          &      34.249\sym{***}&      31.390\sym{***}&      27.016\sym{***}&      24.659\sym{***}&      29.110\sym{***}&                     &      21.634\sym{***}&      17.999\sym{***}\\
-                    &     (0.578)         &     (0.542)         &     (0.580)         &     (0.660)         &     (0.624)         &                     &     (0.607)         &     (0.738)         \\
-[1em]
-male                &      -8.525\sym{***}&      -9.549\sym{***}&      -8.258\sym{***}&      -7.808\sym{***}&      -7.742\sym{***}&      -5.986\sym{***}&     -10.135\sym{***}&     -10.325\sym{***}\\
-                    &     (0.294)         &     (0.283)         &     (0.273)         &     (0.408)         &     (0.352)         &     (0.433)         &     (0.423)         &     (0.383)         \\
-[1em]
-age\_years           &      -5.809\sym{***}&      -5.598\sym{***}&      -5.799\sym{***}&      -5.201\sym{***}&      -5.661\sym{***}&      -5.443\sym{***}&      -5.899\sym{***}&      -4.810\sym{***}\\
-                    &     (0.042)         &     (0.041)         &     (0.039)         &     (0.068)         &     (0.052)         &     (0.065)         &     (0.059)         &     (0.058)         \\
-[1em]
-Constant            &     580.392\sym{***}&     569.394\sym{***}&     580.182\sym{***}&     546.020\sym{***}&     569.628\sym{***}&     555.246\sym{***}&     598.430\sym{***}&     521.062\sym{***}\\
-                    &     (2.683)         &     (2.620)         &     (2.512)         &     (4.268)         &     (3.323)         &     (4.109)         &     (3.785)         &     (3.714)         \\
+Constant            &     575.315\sym{***}&     552.213\sym{***}&     583.787\sym{***}&     599.686\sym{***}&     585.535\sym{***}&     552.407\sym{***}&     563.024\sym{***}&     572.529\sym{***}\\
+                    &     (2.937)         &     (2.879)         &     (2.734)         &     (2.943)         &     (2.781)         &     (3.625)         &     (4.546)         &     (3.205)         \\
 \hline
-N                   &   18963.000         &   20498.000         &   20049.000         &    8526.000         &   11249.000         &    6151.000         &   10376.000         &    8714.000         \\
-R-sq                &       0.668         &       0.660         &       0.682         &       0.642         &       0.691         &       0.669         &       0.644         &       0.662         \\
+N                   &   18266.000         &   20151.000         &   21324.000         &   13485.000         &   19945.000         &   11870.000         &   10148.000         &    9475.000         \\
+R-sq                &       0.657         &       0.645         &       0.645         &       0.708         &       0.655         &       0.643         &       0.662         &       0.717         \\
 \hline\hline
 \multicolumn{9}{l}{\footnotesize Standard errors in parentheses}\\
 \multicolumn{9}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
