--- a/Tables/IE5/IE5_reg_by_rank.tex
+++ b/Tables/IE5/IE5_reg_by_rank.tex
@@ -6,47 +6,29 @@
                     &\multicolumn{1}{c}{(1)}&\multicolumn{1}{c}{(2)}&\multicolumn{1}{c}{(3)}&\multicolumn{1}{c}{(4)}&\multicolumn{1}{c}{(5)}&\multicolumn{1}{c}{(6)}&\multicolumn{1}{c}{(7)}&\multicolumn{1}{c}{(8)}\\
                     &\multicolumn{1}{c}{ratio}&\multicolumn{1}{c}{ratio}&\multicolumn{1}{c}{ratio}&\multicolumn{1}{c}{ratio}&\multicolumn{1}{c}{ratio}&\multicolumn{1}{c}{ratio}&\multicolumn{1}{c}{ratio}&\multicolumn{1}{c}{ratio}\\
 \hline
-year1=2011          &       0.000         &       0.000         &       0.000         &       0.000         &       0.000         &       0.000         &                     &       0.000         \\
-                    &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &                     &         (.)         \\
+val\_uf\_prima2       &       0.208\sym{***}&       1.362\sym{***}&       0.389\sym{***}&       0.300\sym{***}&       0.260\sym{***}&       0.998\sym{***}&       0.149\sym{*}  &       0.066         \\
+                    &     (0.052)         &     (0.054)         &     (0.051)         &     (0.056)         &     (0.053)         &     (0.069)         &     (0.081)         &     (0.061)         \\
 [1em]
-year1=2012          &       1.539\sym{***}&       1.219\sym{**} &       3.191\sym{***}&       2.954\sym{***}&       1.920\sym{***}&       1.674\sym{***}&                     &       1.977\sym{***}\\
-                    &     (0.553)         &     (0.502)         &     (0.502)         &     (0.560)         &     (0.569)         &     (0.426)         &                     &     (0.731)         \\
+male                &      -8.811\sym{***}&     -10.681\sym{***}&      -9.868\sym{***}&      -7.526\sym{***}&      -8.201\sym{***}&     -10.718\sym{***}&      -7.729\sym{***}&      -6.605\sym{***}\\
+                    &     (0.299)         &     (0.287)         &     (0.292)         &     (0.323)         &     (0.302)         &     (0.406)         &     (0.387)         &     (0.358)         \\
 [1em]
-year1=2013          &       5.510\sym{***}&       4.897\sym{***}&       6.760\sym{***}&       7.387\sym{***}&       5.809\sym{***}&       4.476\sym{***}&                     &       4.230\sym{***}\\
-                    &     (0.560)         &     (0.506)         &     (0.506)         &     (0.553)         &     (0.601)         &     (0.458)         &                     &     (0.738)         \\
+age\_years           &      -5.721\sym{***}&      -5.504\sym{***}&      -5.792\sym{***}&      -6.071\sym{***}&      -5.923\sym{***}&      -5.478\sym{***}&      -5.554\sym{***}&      -5.674\sym{***}\\
+                    &     (0.045)         &     (0.046)         &     (0.044)         &     (0.046)         &     (0.045)         &     (0.057)         &     (0.073)         &     (0.051)         \\
 [1em]
-year1=2014          &      16.359\sym{***}&      16.711\sym{***}&      18.410\sym{***}&      20.259\sym{***}&      18.422\sym{***}&                     &                     &      16.738\sym{***}\\
-                    &     (0.589)         &     (0.530)         &     (0.530)         &     (1.054)         &     (0.741)         &                     &                     &     (0.769)         \\
+A                   &       0.000         &       0.000         &       0.000         &       0.000         &       0.000         &       0.000         &       0.000         &       0.000         \\
+                    &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         &         (.)         \\
 [1em]
-year1=2015          &      12.296\sym{***}&      14.468\sym{***}&      16.486\sym{***}&      25.826\sym{***}&      15.207\sym{***}&                     &       0.000         &      14.578\sym{***}\\
-                    &     (0.535)         &     (0.489)         &     (0.492)         &     (1.648)         &     (0.627)         &                     &         (.)         &     (0.702)         \\
+D                   &      -1.028\sym{***}&      -1.296\sym{***}&      -1.509\sym{***}&      -0.689\sym{**} &      -0.690\sym{**} &      -0.404         &      -0.176         &       0.195         \\
+                    &     (0.282)         &     (0.263)         &     (0.272)         &     (0.303)         &     (0.286)         &     (0.357)         &     (0.313)         &     (0.357)         \\
 [1em]
-year1=2016          &      17.731\sym{***}&      19.836\sym{***}&      20.984\sym{***}&      25.507\sym{***}&      17.291\sym{***}&                     &       6.733\sym{***}&      19.504\sym{***}\\
-                    &     (0.522)         &     (0.499)         &     (0.502)         &     (1.730)         &     (0.739)         &                     &     (0.584)         &     (0.712)         \\
+P                   &      -0.057         &      -0.311         &      -0.207         &      -0.975\sym{**} &       0.101         &      -0.173         &       0.113         &       0.005         \\
+                    &     (0.376)         &     (0.348)         &     (0.358)         &     (0.414)         &     (0.377)         &     (0.469)         &     (0.410)         &     (0.457)         \\
 [1em]
-year1=2017          &      22.417\sym{***}&      24.862\sym{***}&      27.317\sym{***}&      22.745\sym{***}&      25.330\sym{***}&                     &      12.052\sym{***}&      27.283\sym{***}\\
-                    &     (0.549)         &     (0.530)         &     (0.535)         &     (0.833)         &     (0.640)         &                     &     (0.595)         &     (0.765)         \\
-[1em]
-year1=2018          &      13.960\sym{***}&      16.211\sym{***}&      19.583\sym{***}&      18.953\sym{***}&      15.766\sym{***}&                     &       3.810\sym{***}&      17.807\sym{***}\\
-                    &     (0.532)         &     (0.505)         &     (0.511)         &     (0.543)         &     (0.557)         &                     &     (0.567)         &     (0.661)         \\
-[1em]
-year1=2019          &      34.163\sym{***}&      31.173\sym{***}&      26.987\sym{***}&      24.658\sym{***}&      29.230\sym{***}&                     &      21.754\sym{***}&      20.162\sym{***}\\
-                    &     (0.578)         &     (0.542)         &     (0.579)         &     (0.660)         &     (0.624)         &                     &     (0.606)         &     (0.723)         \\
-[1em]
-val\_uf\_prima        &       0.247\sym{***}&       0.376\sym{***}&       0.296\sym{***}&      -0.032         &       0.323\sym{***}&       0.370\sym{***}&       0.479\sym{***}&       1.572\sym{***}\\
-                    &     (0.052)         &     (0.050)         &     (0.049)         &     (0.087)         &     (0.074)         &     (0.086)         &     (0.071)         &     (0.069)         \\
-[1em]
-male                &      -8.470\sym{***}&      -9.405\sym{***}&      -8.162\sym{***}&      -7.823\sym{***}&      -7.687\sym{***}&      -5.847\sym{***}&      -9.993\sym{***}&     -10.843\sym{***}\\
-                    &     (0.294)         &     (0.283)         &     (0.273)         &     (0.410)         &     (0.352)         &     (0.433)         &     (0.422)         &     (0.373)         \\
-[1em]
-age\_years           &      -5.848\sym{***}&      -5.662\sym{***}&      -5.846\sym{***}&      -5.195\sym{***}&      -5.703\sym{***}&      -5.492\sym{***}&      -5.987\sym{***}&      -5.080\sym{***}\\
-                    &     (0.043)         &     (0.042)         &     (0.040)         &     (0.069)         &     (0.053)         &     (0.066)         &     (0.061)         &     (0.058)         \\
-[1em]
-Constant            &     582.173\sym{***}&     572.501\sym{***}&     582.317\sym{***}&     545.743\sym{***}&     571.257\sym{***}&     557.355\sym{***}&     602.484\sym{***}&     531.602\sym{***}\\
-                    &     (2.707)         &     (2.649)         &     (2.534)         &     (4.334)         &     (3.341)         &     (4.132)         &     (3.825)         &     (3.636)         \\
+Constant            &     577.136\sym{***}&     563.811\sym{***}&     587.362\sym{***}&     601.633\sym{***}&     587.724\sym{***}&     559.175\sym{***}&     564.035\sym{***}&     572.955\sym{***}\\
+                    &     (2.971)         &     (2.870)         &     (2.771)         &     (2.962)         &     (2.815)         &     (3.624)         &     (4.579)         &     (3.229)         \\
 \hline
-N                   &   18963.000         &   20498.000         &   20049.000         &    8526.000         &   11249.000         &    6151.000         &   10376.000         &    8714.000         \\
-R-sq                &       0.669         &       0.661         &       0.682         &       0.642         &       0.692         &       0.670         &       0.646         &       0.682         \\
+N                   &   18266.000         &   20151.000         &   21324.000         &   13485.000         &   19945.000         &   11870.000         &   10148.000         &    9475.000         \\
+R-sq                &       0.658         &       0.656         &       0.646         &       0.709         &       0.655         &       0.649         &       0.662         &       0.717         \\
 \hline\hline
 \multicolumn{9}{l}{\footnotesize Standard errors in parentheses}\\
 \multicolumn{9}{l}{\footnotesize \sym{*} \(p<0.10\), \sym{**} \(p<0.05\), \sym{***} \(p<0.01\)}\\
